[package]
name = "gym_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive", "cargo"] }
clap_complete = "4.4.6"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
